# CLM-X

./: LICENSE  README.md  pyproject.toml  setup_env.sh
cellstory/: __init__.py  logger.py  utils.py
cellstory/inference/: inference_atac.py  inference_rna.py
cellstory/preprocess/: dataset.py  gene_tokenizer.py  input.py  preprocess.py  preprocessor_tokenizer.py  pretrain_dataset.py
configs/: config_eval.py  config_finetune.py  config_pretrain.py
datamodules/: datasets_pt.py  utils_rna_atac.py
models/: beit_multiway.py  beitv3_pl_value.py  bert_encoder.py  encoder_flash.py  multiway_network.py
scripts/: run_data_preprocessing_atac.py  run_data_preprocessing_perturbation.py  run_data_preprocessing_rna.py  run_finetune_batch_correction.py  run_finetune_cell_type_annotation.py  run_finetune_fusion.py  run_finetune_perturbation.py  run_finetune_translation.py  run_inference_embedding.py  run_inference_perturbation.py  run_pretrain.py
vocab/: ATAC_vocab.json  RNA.vocab.json
