[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clm-x"
version = "0.1.0"
description = "CLM-X: A Cross-modal Language Model Project"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchtext==0.16.2",
    "torchdata==0.7.1",
    "transformers==4.38.2",
    "accelerate==1.13.0",
    "xformers==0.0.23.post1",
    "einops==0.8.2",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "huggingface-hub==0.36.2",
    "datasets==4.8.4",
    "timm==0.6.13",
    "pytorch-lightning==2.6.1", 
    "wandb==0.25.1",
    "scanpy>=1.10.3",
    "scvi-tools==1.3.3",
    "anndata==0.11.4",
    "jax==0.6.2",
    "jaxlib==0.6.2",
    "flax==0.10.7",
    "optax==0.2.8",
    "triton==2.1.0",
    "ninja==1.13.0",
    "pydantic==2.12.5",
    "requests==2.33.1",
    "pyyaml==6.0.3",
    "tqdm==4.67.3",
    "rich==14.3.3",
    "setuptools==80.10.2", 
    "hatchling",
    "dotmap",
    "datasets==4.8.4",
    "sacred",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchtext = { index = "pytorch-cu121" }

[tool.hatch.build.targets.wheel]
packages = ["."]
